# swecc-pypi-template

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
swecc_pypi_template/: main.py
tests/: test_main.py
